# database

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  main.c
.github/workflows/: deploy.yml
scripts/: run.bat  run_tests.bat  test.bat
src/: CMakeLists.txt  getline.c  getline.h  input.c  input.h  main.c  parser.c  parser.h  platform.h  table.c  table.h
tests/: CMakeLists.txt  test_getline.c  test_input.c  test_main.c  test_meta_commands.c  test_output.py  test_parser.c
